# SimpleKinectV2

./: .gitignore  CMakeLists.txt  Coll.md  config.h.in  cpTest.cpp  test.cpp
include/: kinectgrabber.h  simplefilter.h
src/: CMakeLists.txt  kinectgrabber.cpp  main.cpp  simplefilter.cpp
test/: CMakeLists.txt  caliberation_test.cpp  n_test.cpp  orb_test.cpp  surf_test.cpp  test.cpp
